@@ -1,9 +1,10 @@
 Version 3.0.1 June 1, 2006
 ==========================
-CHG: Ticket#153 - TAssetManager now ignores .svn directories (Qiang)
-CHG: Ticket#154 - HTML comments are now parsed as regular template strings (Qiang)
+ENH: Ticket#150 - TDataGrid and TDataList now render table section tags (Qiang)
 ENH: Ticket#151 - added sanity check GET parameters in constructUrl() (Qiang)
 ENH: Ticket#152 - constituent parts of TWizard are exposed (Qiang)
+CHG: Ticket#153 - TAssetManager now ignores .svn directories (Qiang)
+CHG: Ticket#154 - HTML comments are now parsed as regular template strings (Qiang)
 ENH: added sanity check to calling event handlers (Qiang)
 NEW: TTableHeaderRow, TTableFooterRow and table section support (Qiang)
 
